# uwac-data-utils

./: .gitignore  LICENSE.txt  README.md  environment.yml  pyproject.toml  requirements.txt
data_utils/: data.py
data_utils/shru/: data.py  query.py
data_utils/sio/: data.py
src/datautils/: __init__.py  catalogue.py  data.py  helpers.py  hydrophone.py  query.py  read.py  signal.py  stream.py  time.py  util.py
src/datautils/formats/: formats.py  shru.py  sio.py  wav.py
src/tests/: test_signal.py
tests/: __init__.py  test_signal.py
